--- a/style/styles4.css
+++ b/style/styles4.css
@@ -1,37 +1,31 @@
-
 /*form */
-input[type=radio]{
-	cursor: pointer;
+input[type="radio"] {
+  cursor: pointer;
 }
-.logo
-{ 
-
-  position:relative;
-  left:210%;
-  width:70%;
+.logo {
+  position: relative;
+  left: 210%;
+  width: 70%;
 }
 
-.buttons
-{   
-    position:relative;
-	left:15%;
-	padding:10px;
-	top:50px;
-	
+.buttons {
+  position: relative;
+  left: 15%;
+  padding: 10px;
+  top: 50px;
 }
 
-.button
-{
-    font-family:verdana;
-	background-color:black;
-	color:white;
-	border:none;
-	padding:6px 10px;
-	font-size:20px;
-	outline:none;
-	border-radius:5px;
-	cursor: pointer;
-	margin:4px 2px;
+.button {
+  font-family: verdana;
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 6px 10px;
+  font-size: 20px;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 4px 2px;
 }
 
 .button:hover {
@@ -39,71 +33,58 @@ input[type=radio]{
   color: white;
 }
 
-.header
-{
-	display:flex;
-	justify-content:space-around;
-} 
-.form{
-	
-	top:180px;
-    position: absolute;
-    left:10%;
-    margin: 20px;
-    max-width: 800px;
-    padding: 50px;
-    background-color: #191919;
-    color: white;
-    opacity: 0.9;
-    border-radius: 20px
+.header {
+  display: flex;
+  justify-content: space-around;
+}
+.form {
+  top: 180px;
+  position: absolute;
+  left: 10%;
+  margin: 20px;
+  max-width: 800px;
+  padding: 50px;
+  background-color: #535050;
+  color: white;
+  opacity: 0.9;
+  border-radius: 20px;
 }
 
-.form:hover{
-	opacity: 1.0;
+.form:hover {
+  opacity: 1;
 }
-
-
 
 /* style input fields */
 
-input[type=text], input[type=text], input[type=time], input[type=date]{
-    
-    width: 350px;
-    padding: 10px;
-    border: none;
-    background: lightgray;
-    border: 3px solid white;
-    
-    
+input[type="text"],
+input[type="text"],
+input[type="time"],
+input[type="date"] {
+  width: 350px;
+  padding: 10px;
+  border: none;
+  background: lightgray;
+  border: 3px solid white;
 }
 
-input[type ="register"] {
-    background:lightgray;
-    padding: 10px;
-    color: black;
-    font-size: 20px;
-    border: 3px solid white;
-    cursor: pointer;
-    
-    
-   
-
+input[type="register"] {
+  background: lightgray;
+  padding: 10px;
+  color: black;
+  font-size: 20px;
+  border: 3px solid white;
+  cursor: pointer;
 }
 
-
-
-input[type ="register"]:hover{
-    
-	background: #f39c12;
-    
+input[type="register"]:hover {
+  background: #f39c12;
 }
-
 
 /* background image */
-.bgphoto{
-	display: grid;
-    height: auto;
-    margin: auto;
-	
-	position:relative;
+.bgphoto {
+  display: grid;
+  height: auto;
+  margin: auto;
+
+  position: relative;
 }
